[package]
name = "streamserver"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["libs/rtmp", "libs/webrtc", "."]

[workspace.dependencies]
bytesio = "0.3.2"
streamhub = "0.2.2"
h264-decoder = "0.2.2"
xflv = "0.4.2"
commonlib = "0.1.1"
auth = { path = "./libs/auth" }
tokio = { version = "1.37" }

[dependencies]
anyhow = { version = "1.0.81", features = ["backtrace"] }
clap = { version = "4.5.2", features = ["derive"] }
config = { version = "0.14.0", features = ["toml"] }
dirs = "5.0.1"
serde = { version = "1.0.197", features = ["derive"] }
tokio = { workspace = true, features = [
    "macros",
    "rt-multi-thread",
    "sync",
    "io-std",
    "io-util",
    "tracing",
] }
tonic = "0.11.0"
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = [
    "json",
    "local-time",
    "env-filter",
    "chrono",
] }
# rsmpeg = { version = "0.14.2", features = ["ffmpeg6"] }
rtmp = { path = "./libs/rtmp" }
xwebrtc = { path = "./libs/webrtc" }
auth = { path = "./libs/auth" }
streamhub = "0.2.2"
thiserror = "1.0.58"
url = "2.5.0"
tracing-log = "0.2.0"
prost = "0.12.4"

[build-dependencies]
tonic-build = "0.11.0"

# [package.metadata.vcpkg]
# dependencies = ["ffmpeg[avformat,avcodec,vpx,x264,x265]"]
# git = "https:/

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = 'abort'
incremental = false
codegen-units = 256

[profile.test]
opt-level = 3
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = false
codegen-units = 256
# rev = "master"
