[package]
name = "streamserver"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["libs/rtmp", "libs/webrtc", "libs/streamhub", "libs/flv", "."]

[workspace.dependencies]
bytesio = "0.3.4"
streamhub = { path = "./libs/streamhub" }
h264-decoder = "0.2.4"
xflv = { path = "./libs/flv" }
commonlib = "0.1.2"
auth = { path = "./libs/auth" }
tokio = { version = "1.42" }
indexmap = "2.7.0"
serde = "1.0.217"

[dependencies]
anyhow = { version = "1.0.95", features = ["backtrace"] }
clap = { version = "4.5.23", features = ["derive"] }
config = { version = "0.14.1", features = ["toml"] }
dirs = "5.0.1"
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = [
    "macros",
    "rt-multi-thread",
    "sync",
    "io-std",
    "io-util",
    "tracing",
] }
tonic = "0.11.0"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = [
    "json",
    "local-time",
    "env-filter",
    "chrono",
] }
# rsmpeg = { version = "0.14.2", features = ["ffmpeg6"] }
rtmp = { path = "./libs/rtmp" }
xwebrtc = { path = "./libs/webrtc" }
auth = { path = "./libs/auth" }
streamhub = { workspace = true }
thiserror = "1.0.69"
url = "2.5.4"
tracing-log = "0.2.0"
prost = "0.12.6"

[build-dependencies]
tonic-build = "0.11.0"

# [package.metadata.vcpkg]
# dependencies = ["ffmpeg[avformat,avcodec,vpx,x264,x265]"]
# git = "https:/

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = 'abort'
incremental = false
codegen-units = 256

[profile.test]
opt-level = 3
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = false
codegen-units = 256
# rev = "master"
