[package]
name = "xflv"
description = "flv library."
version = "0.3.0"
authors = ["HarlanC <wawacry@qq.com"]
repository = "https://github.com/harlanc/xiu"
license = "MIT"
readme = "README.md"
categories = ["flv"]
keywords = ["flv", "video", "streaming"]
edition = "2018"

[dependencies]
byteorder = "1.4.2"
bytes = "1.6"
failure = "0.1.8"
log = "0.4"

serde = { workspace = true, features = ["derive", "rc"] }
indexmap = { workspace = true }

bytesio = { workspace = true }
# TODO: clone this crate
h264-decoder = "0.2.3"
