[package]
name = "rtmp"
description = "rtmp library."
version = "0.4.1"
authors = ["HarlanC <wawacry@qq.com"]
repository = "https://github.com/harlanc/xiu"
license = "MIT"
readme = "README.md"
categories = ["multimedia", "multimedia::video", 'multimedia::audio']
keywords = ["rtmp", "video", "streaming"]
edition = "2018"

[dependencies]
byteorder = "1.5"
bytes = "1.9"
rand = "0.8"
failure = "0.1.8"
hmac = "0.12"
sha2 = "0.10"
# uuid = { version = "0.6.5", features = ["v4"] }
log = "0.4"
chrono = "0.4"
indexmap = { workspace = true }
async-trait = "0.1.83"
hex = "0.4"
serde_json = { version = "1", default-features = false, features = [
    "alloc",
    "raw_value",
    "std",
] }
serde = { workspace = true, features = ["derive", "rc"] }

thiserror = "2.0.9"

bytesio = { workspace = true }
streamhub = { workspace = true }
h264-decoder = { workspace = true }
xflv = { workspace = true }
commonlib = { workspace = true }
auth = { workspace = true }

# bytesio = { path = "../../library/bytesio/" }
# streamhub = { path = "../../library/streamhub/" }
# h264-decoder = { path = "../../library/codec/h264/" }
# xflv = { path = "../../library/container/flv/" }
# commonlib = { path = "../../library/common/" }

[dependencies.tokio]
workspace = true
features = ["full"]
