[package]
name = "xwebrtc"
version = "0.1.0"
description = "A whip/whep library."
edition = "2021"
authors = ["HarlanC <wawacry@qq.com>"]
license = "MIT"
repository = "https://github.com/harlanc/xiu"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indexmap = "2.7"
http = "1.2"
byteorder = "1.5"
bytes = "1.9"
failure = "0.1.8"
log = "0.4"
webrtc = "0.11.0"
async-trait = "0.1.83"
fdk-aac = "0.6.0"
audiopus = "0.3.0-rc.0"
thiserror = "1.0.69"
lazy_static = "1.5.0"

tokio = { workspace = true }

bytesio = { workspace = true }
streamhub = { workspace = true }
xflv = { workspace = true }
commonlib = { workspace = true }
auth = { workspace = true }

axum = { version = "0.7.9", features = ["macros"] }
axum-macros = "0.4.2"
anyhow = "1.0.95"
serde = { version = "1.0.217", features = ["derive"] }
tower-http = { version = "0.5.2", default-features = false, features = ["trace"] }
tracing = "0.1.41"
